--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -1,31 +1,33 @@
 name: Run Python Script
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+    workflow_dispatch:
+    schedule:
+        - cron: '0 0 9 * *' # Runs at midnight UTC on the 9th day of every month
 
 jobs:
-  run-script:
-    runs-on: ubuntu-latest
+    run-script:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+        steps:
+            - name: Checkout repository
+                uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+            - name: Set up Python
+                uses: actions/setup-python@v4
+                with:
+                    python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            - name: Install dependencies
+                run: |
+                    python -m pip install --upgrade pip
+                    if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run Python script
-        env:
-          GOOGLE_SECRET: ${{ secrets.GOOGLE_SECRET }}
-        run: |
-          python 311_downloader.py
+            - name: Run Python script
+                env:
+                    GOOGLE_SECRET: ${{ secrets.GOOGLE_SECRET }}
+                run: |
+                    python 311_downloader.py
