--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -6,7 +6,7 @@ on:
             - main
     workflow_dispatch:
     schedule:
-        - cron: '0 0 10 * *' # Runs at midnight UTC on the 9th day of every month
+        - cron: '0 0 10 * *' # Runs at midnight UTC on the 10th day of every month (311 data is released each month on 8th)
 
 jobs:
     run-script:
